--- a/versicherungen.html
+++ b/versicherungen.html
@@ -102,41 +102,41 @@
            <div class="col-md-6">
               <h3><a href="versicherungenview.html">Kfz & Haftpflicht</a></h3>
                <ul class="insurance-list">
-                   <li><a href="Berufsunfahigkeit.html">KFZ-versicherung </a></li>
-                   <li><a href="Berufsunfahigkeit.html">Motorradversicherung</a></li>
-                   <li><a href="Berufsunfahigkeit.html">Privathaftpflicht</a></li>
-                   <li><a href="Berufsunfahigkeit.html">Hundehaftpflicht</a></li>
-                   <li><a href="Berufsunfahigkeit.html">Pferdeaftpflicht</a></li>
+                   <li><a href="Berufsunfahigkeit.html"> <span class="fa fa-car"></span> KFZ-versicherung </a></li>
+                   <li><a href="Berufsunfahigkeit.html"> <span class="fa fa-motorcycle"></span> Motorradversicherung</a></li>
+                   <li><a href="Berufsunfahigkeit.html"> <span class="fa fa-user-secret"></span> Privathaftpflicht</a></li>
+                   <li><a href="Berufsunfahigkeit.html"><span class="fa fa-gratipay"></span> Hundehaftpflicht</a></li>
+                   <li><a href="Berufsunfahigkeit.html"><span class="fa fa-paw"></span> Pferdeaftpflicht</a></li>
                </ul>
            </div>
            <div class="col-md-6">
               <h3><a href="versicherungenview.html">Haus & Recht</a></h3>
                <ul class="insurance-list">
-                   <li><a href="Berufsunfahigkeit.html">Rechtsschutzversicherung</a></li>
-                   <li><a href="Berufsunfahigkeit.html">Hausratversicherung</a></li>
-                   <li><a href="Berufsunfahigkeit.html">Wohngebaudeversicherung</a></li>
-                   <li><a href="Berufsunfahigkeit.html">Hundekrankenversicherung</a></li>
-                   <li><a href="Berufsunfahigkeit.html">Reiseversicherung</a></li>
+                   <li><a href="Berufsunfahigkeit.html"><span class="fa fa-gavel"></span> Rechtsschutzversicherung</a></li>
+                   <li><a href="Berufsunfahigkeit.html"><span class="fa fa-h-square"></span> Hausratversicherung</a></li>
+                   <li><a href="Berufsunfahigkeit.html"><span class="fa fa-building"></span> Wohngebaudeversicherung</a></li>
+                   <li><a href="Berufsunfahigkeit.html"><span class="fa fa-paw"></span> Hundekrankenversicherung</a></li>
+                   <li><a href="Berufsunfahigkeit.html"><span class="fa fa-plane"></span> Reiseversicherung</a></li>
                </ul>
            </div>
            <div class="col-md-6">
               <h3><a href="versicherungenview.html">Risiko & Vorsorge</a></h3>
                <ul class="insurance-list">
-                   <li><a href="Berufsunfahigkeit.html">Risikolebensversicherung</a></li>
-                   <li><a href="Berufsunfahigkeit.html">Unfalversicherung</a></li>
-                   <li><a href="Berufsunfahigkeit.html">Sterbegeldversicherung</a></li>
-                   <li><a href="Berufsunfahigkeit.html">Berufsunfahigkeit</a></li>
-                   <li><a href="versicherungenview.html">Rentenversicherung</a></li>
+                   <li><a href="Berufsunfahigkeit.html"><span class="fa fa-exclamation-triangle"></span> Risikolebensversicherung</a></li>
+                   <li><a href="Berufsunfahigkeit.html"><span class="fa fa-eur"></span> Unfalversicherung</a></li>
+                   <li><a href="Berufsunfahigkeit.html"><span class="fa fa-plus"></span> Sterbegeldversicherung</a></li>
+                   <li><a href="Berufsunfahigkeit.html"><span class="fa fa-asl-interpreting"></span> Berufsunfahigkeit</a></li>
+                   <li><a href="versicherungenview.html"><span class="fa fa-product-hunt"></span> Rentenversicherung</a></li>
                </ul>
            </div>
            <div class="col-md-6">
               <h3><a href="versicherungenview.html">Kfz & Haftpflicht</a></h3>
                <ul class="insurance-list">
-                   <li><a href="Berufsunfahigkeit.html">Private Krankenversicherung</a></li>
-                   <li><a href="Berufsunfahigkeit.html">Gesetzliche Krankenversicherung</a></li>
-                   <li><a href="Berufsunfahigkeit.html">Zahnzusatzversicherung</a></li>
-                   <li><a href="Berufsunfahigkeit.html">Heilpraktiker & Brille</a></li>
-                   <li><a href="Berufsunfahigkeit.html">Krankenhauszusatz</a></li>
+                   <li><a href="Berufsunfahigkeit.html"><span class="fa fa-medkit"></span> Private Krankenversicherung</a></li>
+                   <li><a href="Berufsunfahigkeit.html"><span class="fa fa-heartbeat"></span> Gesetzliche Krankenversicherung</a></li>
+                   <li><a href="Berufsunfahigkeit.html"><span class="fa fa-certificate"></span> Zahnzusatzversicherung</a></li>
+                   <li><a href="Berufsunfahigkeit.html"><span class="fa fa-heart"></span> Heilpraktiker & Brille</a></li>
+                   <li><a href="Berufsunfahigkeit.html"><span class="fa fa-hospital-o"></span> Krankenhauszusatz</a></li>
                </ul>
            </div>
        </div>
