--- a/stromview.html
+++ b/stromview.html
@@ -101,7 +101,7 @@
    <div class="news-section">
        <div class="container">
          
-        <div class="col-md-9 view-form animated flipInX">
+        <div class="col-md-9 view-form animated">
             <div class="row">
                <div class="col-md-6">
                 <div class="form-group">
@@ -321,7 +321,7 @@
             </div>
         </div>
         <div class="col-md-3">
-           <ul class="bottom-form animated slideInRight">
+           <ul class="bottom-form animated">
                <li>
                    <h3>Geprüft und Zertifiziert</h3>
                    <p>Zertifiziert wurde die Servicequalität des Unternehmens TopTarif, das die Rechnergrundlage bildet.</p>
