--- a/thankyou.html
+++ b/thankyou.html
@@ -16,6 +16,7 @@
     <!--Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <!--Main File-->
     
     <link rel="stylesheet" href="jquery.bxslider/jquery.bxslider.css">
@@ -98,65 +99,16 @@
           </div>
       </div>
    </header>
-    <div class="contact-form">
+   <div class="thankyou">
        <div class="container">
-       <div class="row">
-       <div class="title">
-       <h3 class="text-center">Berufsunfahigkeitsversicherung zu top-konditionen! <br>
-        <span>erhalten sie kostenlos 3 angebote und vergleichen sie selbst</span></h3>
+         <div class="row">
+                <h3><b>Danke !</b> </h3>
+                <h1><span class="fa fa-check"></span></h1>
+                <p> Ihr Formular wurde bereits eingereicht, wir melden uns umgehend bei Ihnen.</p>
+                <a href="index.html" class="button"> Geh zurück nach hause</a>
+         </div>
        </div>
-       </div>
-        <div class="row">
-            <div class="inner-contact">
-           <div class="col-md-6 col-md-offset-1">
-            <div class="form-group">
-                <label class="control-label col-sm-1" for="andrede">Herr:</label>
-                <div class="col-sm-1">
-                 <input type="radio" name="name" value="Herr" class="checkbox">
-                </div>
-                <label class="control-label col-sm-1" for="andrede">Frau:</label>
-                <div class="col-sm-1">
-                 <input type="radio" name="name" value="Frau" class="checkbox">
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-sm-6">
-                  <input type="text" name="andrede" placeholder="Vorname" required>
-                </div>
-                <div class="col-sm-6">
-                  <input type="text" name="andrede" placeholder="Nachname" required>
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-sm-6">
-                  <input type="text" name="andrede" placeholder="Telefonnummer" required>
-                </div>
-                <div class="col-sm-6">
-                  <input type="text" name="andrede" placeholder="Email adresse" required>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="control-label col-sm-12" for="andrede"></label>
-                <div class="col-sm-12">
-                  <textarea name="message" id="" rows="5" placeholder="haben Sie Anmerkungen?"></textarea>
-                </div>
-            </div>
-            </div>
-            <div class="col-md-4">
-            <ul class="contact-list-item">
-                <li>Kostenlos & unverbindlich</li>
-                <li>Schnell & einfach</li>
-                <li>100% Datensicherheit</li>
-            </ul>
-            <div class="checkbox-form-group">
-                <input type="checkbox" name="terms" value="terms" class="checkbox"> Ich akzeptiere die <a href="#" target="_blank">Datenschutzbestimmunge.</a><br>
-            </div>
-            <p class=""><a href="#" class="button2" type="button">Angebote eralten <small>kostenlos & unverbindlich</small></a></p>
-            </div>
-            </div>
-        </div>
-        </div>
-    </div>
+   </div>
    <footer>
        <div class="footer-top">
            <div class="container">
@@ -200,14 +152,14 @@
                     <div class="outside">
                       <p><span id="slider-prev"></span> <span id="slider-next"></span></p>
                     </div>
-                    <a href="">Continue Reading</a>
+                    <a href="news.html">Continue Reading</a>
                </div>
            </div>
        </div>
    </footer>
     <div class="copyright">
         <div class="container">
-        <p>&copy; Glinde Spart 2017. Alle Rechte vorbehalten</p>  
+        <p>&copy; Glinde Spart 2017. All Rights Reserved</p>  
         </div>
     </div>
 
