--- a/gasview.html
+++ b/gasview.html
@@ -213,11 +213,11 @@
                    </div>
                  </div>
                  </div>
-                 <p class="center"><a href="stromview.html" class="button" type="button">Jetzt vergleichen</a></p>
+                 <p class="center"><a href="contact.html" class="button" type="button">Jetzt vergleichen</a></p>
             </div>
         </div>
         <div class="col-md-3">
-           <ul class="bottom-form animated slideInRight">
+           <ul class="bottom-form">
                <li>
                    <h3>Geprüft und Zertifiziert</h3>
                    <p>Zertifiziert wurde die Servicequalität des Unternehmens TopTarif, das die Rechnergrundlage bildet.</p>
