--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
    </header>
    <div class="banner">
       <div class="container">
-       <div class="form animated slideInDown">
+       <div class="form animated">
            <ul class="nav nav-tabs">
                 <li class="active"><a data-toggle="tab" href="#home"><span class="fa fa-home"></span>  <b>Stromvergleich</b></a></li>
                 <li><a data-toggle="tab" href="#menu1"><span class="fa fa-plug"></span>  <b>Gasvergleich</b></a></li>
@@ -231,7 +231,7 @@
                             </div>
                         </div>
                         <div class="row">
-                        <p class="center"><a href="" class="button" type="button">Jetzt vergleichen</a></p>
+                        <p class="center"><a href="krankenversicherung.html" class="button" type="button">Jetzt vergleichen</a></p>
                         </div>
                       </form>
                 </div>
@@ -259,7 +259,7 @@
                           <div class="col-md-3"></div>
                         </div>
                         <div class="row">
-                        <p class="center"><a href="#" class="button" type="button">Jetzt vergleichen</a></p>
+                        <p class="center"><a href="privathaftpflicht.html" class="button" type="button">Jetzt vergleichen</a></p>
                         </div>
                       </form>
                 </div>
