--- a/kfz.html
+++ b/kfz.html
@@ -178,9 +178,70 @@
                                                   <div class="col-sm-7">
                                                     <select name="dropdown" id="dropdown">
                                                         <option>Bitte eingeben oder wahlen</option>
-                                                        <option>2</option>
-                                                        <option>3</option>
-                                                        <option>4</option>
+                                                        <option>Audi<option>
+                                                        <option>BMW<option>
+                                                        <option>Ford<option>
+                                                        <option>Mercedes-Benz<option>
+                                                        <option>Opel<option>
+                                                        <option>VW (Volkswagen)<option>
+                                                        <option>-- Alle Hersteller --<option>
+                                                        <option>Alfa Romeo<option>
+                                                        <option>Audi<option>
+                                                        <option>Austin<option>
+                                                        <option>Barkas<option>
+                                                        <option>BMW<option>
+                                                        <option>Cadillac<option>
+                                                        <option>Chevrolet<option>
+                                                        <option>Chrysler<option>
+                                                        <option>Citroen<option>
+                                                        <option>Corvette<option>
+                                                        <option>Dacia<option>
+                                                        <option>Daewoo<option>
+                                                        <option>Daihatsu<option>
+                                                        <option>Dodge<option>
+                                                        <option>Fiat<option>
+                                                        <option>Ford<option>
+                                                        <option>HDPIC<option>
+                                                        <option>Honda<option>
+                                                        <option>Hyundai<option>
+                                                        <option>Infiniti<option>
+                                                        <option>Isuzu<option>
+                                                        <option>Iveco<option>
+                                                        <option>Jaguar<option>
+                                                        <option>Jeep<option>
+                                                        <option>Jiangling<option>
+                                                        <option>Kia<option>
+                                                        <option>Lada<option>
+                                                        <option>Lancia<option>
+                                                        <option>Land Rover<option>
+                                                        <option>LDV<option>
+                                                        <option>Lexus<option>
+                                                        <option>Mazda<option>
+                                                        <option>Mercedes-Benz<option>
+                                                        <option>MG<option>
+                                                        <option>Mia Electric<option>
+                                                        <option>Mini (BMW)<option>
+                                                        <option>Mini (Rover)<option>
+                                                        <option>Mitsubishi<option>
+                                                        <option>Nissan<option>
+                                                        <option>Opel<option>
+                                                        <option>Peugeot<option>
+                                                        <option>Pontiac<option>
+                                                        <option>Porsche<option>
+                                                        <option>Proton<option>
+                                                        <option>Renault<option>
+                                                        <option>Rover
+                                                        <option>Saab<option>
+                                                        <option>SEAT<option>
+                                                        <option>Skoda
+                                                        <option>Smart<option>
+                                                        <option>SsangYong<option>
+                                                        <option>Subaru<option>
+                                                        <option>Suzuki<option>
+                                                        <option>Talbot<option>
+                                                        <option>Tata<option>
+                                                        <option>Tesla<option>
+                                                        <option>Toyota<option>
                                                     </select>
                                                   </div>
                                               </div>
@@ -188,10 +249,50 @@
                                                   <label class="control-label col-sm-5">Modellreihe</label>
                                                   <div class="col-sm-7">
                                                     <select name="dropdown" id="dropdown">
-                                                        <option>Bitte eingeben oder wahlen</option>
-                                                        <option>2</option>
-                                                        <option>3</option>
-                                                        <option>4</option>
+                                                        <option>Focus</option>
+                                                        <option>Fiesta</option>
+                                                        <option>Mondeo</option>
+                                                        <option>---- alle Modellreihen ----</option>
+                                                        <option>B-Max</option>
+                                                        <option>C-Max</option>
+                                                        <option>Cougar</option>
+                                                        <option>EcoSport</option>
+                                                        <option>Econovan</option>
+                                                        <option>Edge</option>
+                                                        <option>Escort</option>
+                                                        <option>Escort Express</option>
+                                                        <option>Explorer</option>
+                                                        <option>Fiesta</option>
+                                                        <option>Focus</option>
+                                                        <option>Fusion</option>
+                                                        <option>Galaxy</option>
+                                                        <option>Ka</option>
+                                                        <option>Kuga</option>
+                                                        <option>Maverick</option>
+                                                        <option>Mondeo</option>
+                                                        <option>Mustang</option>
+                                                        <option>Orion</option>
+                                                        <option>Probe</option>
+                                                        <option>Puma</option>
+                                                        <option>Ranger</option>
+                                                        <option>S-Max</option>
+                                                        <option>Scorpio</option>
+                                                        <option>Sierra</option>
+                                                        <option>Streetka</option>
+                                                        <option>Tourneo</option>
+                                                        <option>Transit</option>
+                                                        <option>Windstar</option>
+                                                    </select>
+                                                  </div>
+                                              </div>
+                                              <div class="form-group">
+                                                  <label class="control-label col-sm-5">Kraftstoffart</label>
+                                                  <div class="col-sm-7">
+                                                    <select name="dropdown" id="dropdown">
+                                                        <option>Benzin / Super</option>
+                                                        <option>Diesel</option>
+                                                        <option>Sonstiges(Gas,Alkohol-Hybrid)</option>
+                                                        <option>Elektro</option>
                                                     </select>
                                                   </div>
                                               </div>
@@ -199,10 +300,12 @@
                                                   <label class="control-label col-sm-5">Fahrzeugkategorie</label>
                                                   <div class="col-sm-7">
                                                     <select name="dropdown" id="dropdown">
-                                                        <option>Bitte eingeben oder wahlen</option>
-                                                        <option>2</option>
-                                                        <option>3</option>
-                                                        <option>4</option>
+                                                        <option>Coupe/Roadster</option>
+                                                        <option>Cabrio</option>
+                                                        <option>Van/Bus</option>
+                                                        <option>Kombi</option>
+                                                        <option>Gelandewagen/SUV</option>
+                                                        <option>Limousine</option>
                                                     </select>
                                                   </div>
                                               </div>
@@ -210,10 +313,15 @@
                                                   <label class="control-label col-sm-5">Leistungsbereich</label>
                                                   <div class="col-sm-7">
                                                     <select name="dropdown" id="dropdown">
-                                                        <option>Bitte eingeben oder wahlen</option>
-                                                        <option>2</option>
-                                                        <option>3</option>
-                                                        <option>4</option>
+                                                        <option>70 bis 79 PS (52 bis 58 kW)</option>
+                                                        <option>90 bis 99 PS (66 bis 73 KW)</option>
+                                                        <option>100 bis 109 PS (74 bis 80 kW)</option>
+                                                        <option>110 bis 119 PS (81 bis 88 kW)</option>
+                                                        <option>130 bis 139 PS (96 bis 102 KW)</option>
+                                                        <option>140 bis 149 PS (103 bis 109 kW)</option>
+                                                        <option>150 bis 159 PS (110 bis 117 kW)</option>
+                                                        <option>160 bis 169 PS (118 bis 124 kW)</option>
+                                                        <option>180 bis 189 PS (133 bis 139 kW)</option>
                                                     </select>
                                                   </div>
                                               </div>
