--- a/index.html
+++ b/index.html
@@ -285,11 +285,11 @@
                             <option>5000 Kwh</option>
                         </select>
                     </div>
-                       <a href="#" class="button" type="button">Jetzt vergleichen</a>
+                       <a href="stromview.html" class="button" type="button">Jetzt vergleichen</a>
                    </form>
                </li>
                <li>
-                   <h3>STROMPREISE VERGLEICHEN</h3>
+                   <h3>GASPREISE VERGLEICHEN</h3>
                    <p>Vergleichen Sie jetzt mehrere tausend Tarife und sparen Sie bis zu 500 Euro pro Jahr!</p>
                    <form action="">
                        <div class="bottom-form-group">
@@ -303,7 +303,7 @@
                             <option>5000 Kwh</option>
                         </select>
                     </div>
-                       <a href="#" class="button" type="button">Jetzt vergleichen</a>
+                       <a href="gasview.html" class="button" type="button">Jetzt vergleichen</a>
                    </form>
                </li>
            </ul>
