--- a/gasview.html
+++ b/gasview.html
@@ -101,7 +101,7 @@
    <div class="news-section">
        <div class="container">
          
-        <div class="col-md-9 view-form animated flipInX">
+        <div class="col-md-9 view-form">
             <div class="row">
                <div class="col-md-6">
                 <div class="form-group">
