--- a/fragenundantworten.html
+++ b/fragenundantworten.html
@@ -150,7 +150,7 @@
                 </div> 
            </div>
            <div class="col-md-4">
-               <ul class="bottom-form animated slideInRight">
+               <ul class="bottom-form">
                    <li>
                        <h3>Geprüft und Zertifiziert</h3>
                        <p>Zertifiziert wurde die Servicequalität des Unternehmens TopTarif, das die Rechnergrundlage bildet.</p>
